Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69244

qmake does not handle shadow build paths when generating xcode projects.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.11.2
    • 5.9.6, 5.10.1, 5.11.1
    • Build tools: qmake
    • None
    • macOS
    • 70d9fecd0acc624a2413bd2fe362adb85880773b

    Description

      When generating xcode project files with "-spec macx-xcode -recursive", it cannot properly generate the SUBDIRS projects since it's not respecting the shadow build directories:

       

      Reading /code/example-project/library/library.pro [/builds/example-project-Desktop_Qt_5_10_1_clang_64bit-Debug/library]
      Reading /code/example-project/examples/examples.pro [/builds/example-project-Desktop_Qt_5_10_1_clang_64bit-Debug/examples]
      Reading /code/example-project/examples/typewriter/typewriter.pro [/builds/example-project-Desktop_Qt_5_10_1_clang_64bit-Debug/examples/typewriter]
      WARNING: Ignored (not found) '/code/example-project/examples/typewriter/typewriter.xcodeproj'
      WARNING: Ignored (not found) '/code/example-project/library/library.xcodeproj'
      WARNING: Ignored (not found) '/code/example-project/examples/typewriter/typewriter.xcodeproj'
      

      This was also fixed a long time ago in the visual studio generator (QTBUG-49665) and seems to be forgotten in the xcode generation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gri Christoph Keller
            gri Christoph Keller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes