Fix recursive qmake xcode project generation with shadow builds

For some reason, the solution generator was looking for the xcodeproj
files in the source tree. It should look for them in the output tree
instead.

Task-number: QTBUG-69244
Change-Id: I7525886d614ddfdee705b27aacafc8f90a6f9d1d
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>